# test-skbuild-win-arm

./: CMakeLists.txt  pyproject.toml
.github/workflows/: wheels.yml
