[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "skbuild-example"
version = "0.0.1"
requires-python = ">=3.12"

[tool.cibuildwheel]
build-verbosity = "1"
enable = ["cpython-freethreading"]
test-command = "python -c 'import example'"
build-frontend = "build"